# BCG-Matrix-Generator

./: .gitignore  CLAUDE.md  LICENSE  License  README.md  main.py  pyproject.toml
data/: bcg_raw.csv
scripts/: make_bcg.py
