[project]
name = "BCG Matrix Generator"
version = "0.1.0"
description = "BCG Matrix Generator - A tool for creating Boston Consulting Group matrix visualizations from product sales data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
]
